--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="header-info">
                     <h1>The Greatest show on the earth</h1>
                     <p>FIFA World Cup will be held in Qatar.FIFA World Cup will participate 32 team.Maracana Stadium is the largest stadium in Qatar Check our live scores web page for every World Cup results</p>
-                    <a href="#">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <div class="header-thumbnail">
                     <img src="images/Banner Image.png" alt="">
@@ -29,7 +29,6 @@
     <!-- header section end -->
     <!-- main -->
     <main>
-
     </main>  
 </body>
 </html>
