--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 <body>
     <!-- header section start -->
     <header>
-        <div class="container">
-            <div class="header-wrap">
-                <div class="header-info">
-                    <h1>The Greatest show on the earth</h1>
-                    <p>FIFA World Cup will be held in Qatar.FIFA World Cup will participate 32 team.Maracana Stadium is the largest stadium in Qatar Check our live scores web page for every World Cup results</p>
-                    <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
-                </div>
-                <div class="header-thumbnail">
-                    <img src="images/Banner Image.png" alt="">
-                </div>
+        <div class="container header-container">
+            <div class="header-left">
+                <h1>The Greatest show on the earth</h1>
+                <p>The fifa World cup 2022 Quater.the maracana stadium is a big stadium and very unic.</p>
+            </div>
+            <div class="header-right">
+
             </div>
         </div>
     </header>
