--- a/index.html
+++ b/index.html
@@ -16,16 +16,95 @@
         <div class="container header-container">
             <div class="header-left">
                 <h1>The Greatest show on the earth</h1>
-                <p>The fifa World cup 2022 Quater.the maracana stadium is a big stadium and very unic.</p>
+                <p>The fifa World cup 2022 Quater.the maracana stadium is a big stadium and very unic.the particepet team 32 in Quater world cup 2022</p>
+                <a href="" class="btn live-btn">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="header-right">
-
+                <div class="header-right-img">
+                    <img src="images/Banner Image.png" alt="Marcelo">
+                </div>
             </div>
         </div>
     </header>
     <!-- header section end -->
     <!-- main -->
     <main>
+        <!-- blog section start -->
+        <section class="main-blog">
+            <div class="container blog-container">
+                <!-- aside -->
+                <aside class="left-aside">
+                    <div class="blog-link">
+                        <ul>
+                            <li><a target="_blank" href="#" class="btn">Upcoming Match</a></li>
+                            <li><a target="_blank" href="#" class="btn">All Groups</a></li>
+                            <li><a target="_blank" href="#" class="btn">blog</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <!-- blog -->
+                <div class="right-blog">
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="#">Transfer</a>
+                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="icon">
+                                    <img src="images/Time Icon.png" alt="">
+                                    <span>10h</span>
+                                </div>
+                                <div class="icon">
+                                    <img src="images/Chat Icon.png" alt="">
+                                    <span>24</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="#">Transfer</a>
+                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="icon">
+                                    <img src="images/Time Icon.png" alt="">
+                                    <span>10h</span>
+                                </div>
+                                <div class="icon">
+                                    <img src="images/Chat Icon.png" alt="">
+                                    <span>24</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="#">Transfer</a>
+                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="icon">
+                                    <img src="images/Time Icon.png" alt="">
+                                    <span>10h</span>
+                                </div>
+                                <div class="icon">
+                                    <img src="images/Chat Icon.png" alt="">
+                                    <span>24</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- blog section end -->
     </main>  
 </body>
 </html>
