some design added

--- a/index.html
+++ b/index.html
@@ -35,30 +35,32 @@
                 <!-- aside -->
                 <aside class="left-aside">
                     <div class="blog-link">
-                        <ul>
-                            <li><a target="_blank" href="#" class="btn">Upcoming Match</a></li>
-                            <li><a target="_blank" href="#" class="btn">All Groups</a></li>
-                            <li><a target="_blank" href="#" class="btn">blog</a></li>
+                        <ul class="menu-btn">
+                            <li><a target="_blank" href="#" class="primary-btn mbl-btn">Upcoming Match</a></li>
+                            <li><a target="_blank" href="#" class="primary-btn mbl-btn">All Groups</a></li>
+                            <li><a target="_blank" href="#" class=" aside-active-btn">Blog</a></li>
                         </ul>
                     </div>
                 </aside>
                 <!-- blog -->
-                <div class="right-blog">
+                <div class="blog-wrap">
                     <div class="transfer-box">
                         <div class="thumnail-box">
                             <img src="images/Blog Image.png" alt="">
                         </div>
-                        <div class="blog-details">
-                            <a href="#">Transfer</a>
-                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
-                            <div class="blog-info">
-                                <div class="icon">
-                                    <img src="images/Time Icon.png" alt="">
-                                    <span>10h</span>
-                                </div>
-                                <div class="icon">
-                                    <img src="images/Chat Icon.png" alt="">
-                                    <span>24</span>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -67,17 +69,19 @@
                         <div class="thumnail-box">
                             <img src="images/Blog Image.png" alt="">
                         </div>
-                        <div class="blog-details">
-                            <a href="#">Transfer</a>
-                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
-                            <div class="blog-info">
-                                <div class="icon">
-                                    <img src="images/Time Icon.png" alt="">
-                                    <span>10h</span>
-                                </div>
-                                <div class="icon">
-                                    <img src="images/Chat Icon.png" alt="">
-                                    <span>24</span>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -86,25 +90,174 @@
                         <div class="thumnail-box">
                             <img src="images/Blog Image.png" alt="">
                         </div>
-                        <div class="blog-details">
-                            <a href="#">Transfer</a>
-                            <p>Transfer Live:Chlesea in talks over kimpenbe transfer</p>
-                            <div class="blog-info">
-                                <div class="icon">
-                                    <img src="images/Time Icon.png" alt="">
-                                    <span>10h</span>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
                                 </div>
-                                <div class="icon">
-                                    <img src="images/Chat Icon.png" alt="">
-                                    <span>24</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transfer-box">
+                        <div class="thumnail-box">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-text">
+                                <a href="#" class="transfer-btn">Transfer</a>
+                                <p>Transfer Live:Chelsea in talks over kimpenbe transfer</p>
+                                <div class="icon-wrap">
+                                    <div class="left-icon">
+                                        <img src="images/Time Icon.png" alt="">
+                                        <p>10h</p>
+                                    </div>
+                                    <div class="right-icon">
+                                        <img src="images/Chat Icon.png" alt="">
+                                        <p>23</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="container btn-container">
+                <div class="view-btn-wrapp">
+                    <a href="#" class="view-all-btn">View All</a>
+                </div>
+            </div>
         </section>
         <!-- blog section end -->
-    </main>  
+    </main> 
+    <footer>
+        <div class="container footer-container">
+            <h1>Goal</h1>
+            <hr>
+            <div class="link-wrap">
+                <ul class="footer-menu">
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Privacy Settings</a></li>
+                    <li><a href="#">Goal App</a></li>
+                    <li><a href="#">Goal Live</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer> 
 </body>
 </html>
