somthing change and second page added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page | World cup</title>
-    <!-- font awsome -->
-    <script src="https://kit.fontawesome.com/52d4052aca.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- responsive style -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/52d4052aca.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header section start -->
@@ -34,13 +36,11 @@
             <div class="container blog-container">
                 <!-- aside -->
                 <aside class="left-aside">
-                    <div class="blog-link">
-                        <ul class="menu-btn">
-                            <li><a target="_blank" href="#" class="primary-btn mbl-btn">Upcoming Match</a></li>
-                            <li><a target="_blank" href="#" class="primary-btn mbl-btn">All Groups</a></li>
-                            <li><a target="_blank" href="#" class=" aside-active-btn">Blog</a></li>
-                        </ul>
-                    </div>
+                    <ul class="menu-btn">
+                        <li><a target="_blank" href="index-2.html" class="primary-btn mbl-btn">Upcoming Match</a></li>
+                        <li><a target="_blank" href="#" class="primary-btn mbl-btn">All Groups</a></li>
+                        <li><a class="active-btn" target="_blank" href="#" class=" aside-active-btn">Blog</a></li>
+                    </ul>
                 </aside>
                 <!-- blog -->
                 <div class="blog-wrap">
@@ -236,28 +236,39 @@
                 </div>
             </div>
             <div class="container btn-container">
-                <div class="view-btn-wrapp">
-                    <a href="#" class="view-all-btn">View All</a>
-                </div>
+                <a href="#" class="view-all-btn">View All</a>
             </div>
         </section>
-        <!-- blog section end -->
-    </main> 
-    <footer>
+        <!-- blog section end --> 
+    </main>
+    <!-- footer section start -->
+    <footer class="footer-background">
         <div class="container footer-container">
-            <h1>Goal</h1>
-            <hr>
-            <div class="link-wrap">
-                <ul class="footer-menu">
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Privacy Settings</a></li>
-                    <li><a href="#">Goal App</a></li>
-                    <li><a href="#">Goal Live</a></li>
-                </ul>
+            <div class="main-footer">
+                    <h1 class="title-footer">Goal</h1>
+                    <hr>
+                </div>
+                <div class="footer-link-wrap">
+                    <ul class="footer-link">
+                        <li><a href="#">Contact US</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Privacy Setting</a></li>
+                        <li><a href="#">Goal App</a></li>
+                        <li><a href="#">Goal Live</a></li>
+                    </ul>
+                </div>
+                <div class="social-link-wrap">
+                    <ul class="social-link">
+                        <li><a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a target="_blank" href="https://twitter.com/login"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer> 
+    </footer>
+    <!-- footer section end -->
 </body>
 </html>
