webpage-2 style and responsive

--- a/index-2.html
+++ b/index-2.html
@@ -31,40 +31,105 @@
     <!-- header section end -->
     <!-- main -->
     <main>
-        <!-- blog section start -->
-        <section class="main-blog">
-            <div class="container blog-container">
-                <!-- aside -->
-                <aside class="left-aside">
-                    <ul class="menu-btn">
-                        <li><a target="_blank" href="#" class="primary-btn mbl-btn">Upcoming Match</a></li>
-                        <li><a target="_blank" href="#" class="primary-btn mbl-btn">All Groups</a></li>
-                        <li><a class="active-btn" target="_blank" href="#" class=" aside-active-btn">Blog</a></li>
+        <!-- upcoming section start -->
+        <section>
+            <div class="container upcoming-match">
+                <div class="match-aside">
+                    <ul class="match-menu">
+                        <li><a class="match-btn match-btn-active" href="#">Upcoming Match</a></li>
+                        <li><a class="match-btn" href="#">All Groups</a></li>
+                        <li><a class="match-btn" href="index.html">Blog</a></li>
                     </ul>
-                </aside>
-                <!-- blog -->
-                <div class="blog-wrap">
-                    <div class="ucm-match">
-                        <div class="img-match-wrap">
-                            <div class="img-left">
+                </div>
+                <div class="upcoming-mtc-wrapper">
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
                                 <img src="images/germany Flag.png" alt="">
                             </div>
-                            <div class="img-right">
+                            <div class="right-img">
                                 <img src="images/Flag.png" alt="">
                             </div>
                         </div>
-                        <div class="match-info">
-                            <p>Germany VS France</p>
-                            <br>
-                            <span>April 01,2023, 1.00 AM</span>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
+                            <div class="right-img">
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                        </div>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
+                            <div class="right-img">
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                        </div>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
+                            <div class="right-img">
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                        </div>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
+                            <div class="right-img">
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                        </div>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
+                        </div>
+                    </div>
+                    <div class="upcoming-mtc-thumnail">
+                        <div class="mtc-img-wrapper">
+                            <div class="left-img">
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
+                            <div class="right-img">
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                        </div>
+                        <div class="upcoming-mtc-info">
+                            <h4>Germany VS France</h4>
+                            <p>April 01,2023, 1.00 AM</p>
                         </div>
                     </div>
                 </div>
-            <div class="container btn-container">
-                <a href="#" class="view-all-btn">View All</a>
             </div>
         </section>
-        <!-- blog section end --> 
+        <!-- upcoming section end -->
     </main>
     <!-- footer section start -->
     <footer class="footer-background">
