--- a/index-2.html
+++ b/index-2.html
@@ -128,6 +128,9 @@
                     </div>
                 </div>
             </div>
+            <div class="container btn-container">
+                <a href="#" class="view-all-btn">View All</a>
+            </div>
         </section>
         <!-- upcoming section end -->
     </main>
