--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 </div>
                 <div class="social-link-wrap">
                     <ul class="social-link">
-                        <li><a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a target="_blank" href="https.com/"><i class="fa-brands fa-facebook"></i></a></li>
                         <li><a target="_blank" href="https://twitter.com/login"><i class="fa-brands fa-twitter"></i></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></li>
